# sort_pictures

./: README.md  main.py  pyproject.toml  sort_pictures.py
